--- a/src/data/posts.yml
+++ b/src/data/posts.yml
@@ -4,7 +4,7 @@ posts:
       title: "Block texte"
       rebloggedusername: "rebloggedusername"
       IsDeactivated: true
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       PinnedPostLabel: "Pinned"
       Month: "January"
       DayOfMonth: "13"
@@ -34,7 +34,7 @@ posts:
       Host: "wintersoldier.com"
       Description: "Description"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -45,9 +45,9 @@ posts:
         - Tag: "Tag1"
         - Tag: "Autre tag"
     - type: "photo"
-      PhotoURL-HighRes: "../assets/img/PhotoURL-HighRes.jpg"
+      PhotoURL-HighRes: "../assets/img/PhotoURL-HighRes.gif"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -59,7 +59,7 @@ posts:
         - Tag: "Autre tag"
     - type: "photoset"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -74,9 +74,9 @@ posts:
         - Tag: "Tag1"
         - Tag: "Autre tag"
     - type: "video"
-      videoSRC: "https://www.youtube.com/embed/Xk14P2TK0KQ"
+      videoSRC: "https://www.youtube.com/embed/psjdZjB6FSc"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -90,7 +90,7 @@ posts:
       Quote: "Who the hell is Bucky"
       Source: "Bucky Barnes"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -110,7 +110,7 @@ posts:
         - Label: "Steve"
           Line: "Then finish it. 'Cause I'm with you 'til the end of the line."
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
@@ -121,7 +121,7 @@ posts:
         - Tag: "Tag1"
         - Tag: "Autre tag"
     - type: "answer"
-      AskerPortraitURL-64: "../assets/img/portraitURL-64.png"
+      AskerPortraitURL-64: "../assets/img/portraitURL-64.gif"
       Asker: <a href="#" class="asker">askername</a>
       Question: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum rhoncus ultrices. Donec egestas lectus in tincidunt eleifend. In maximus, ex vel tristique eleifend, odio nisi dictum magna, pellentesque porttitor erat ante quis dui. Ut ante sem, lacinia quis massa et, pretium volutpat tellus. Suspendisse condimentum imperdiet neque, eu volutpat odio varius facilisis. Morbi nec massa vehicula, vestibulum nulla in, sagittis velit. Ut ultricies gravida orci malesuada tincidunt.</p>
       AnswererPortraitURL-64: "../assets/img/avatar.jpg"
@@ -130,7 +130,7 @@ posts:
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum rhoncus ultrices. Donec egestas lectus in tincidunt eleifend. In maximus, ex vel tristique eleifend, odio nisi dictum magna, pellentesque porttitor erat ante quis dui. Ut ante sem, lacinia quis massa et, pretium volutpat tellus. Suspendisse condimentum imperdiet neque, eu volutpat odio varius facilisis. Morbi nec massa vehicula, vestibulum nulla in, sagittis velit. Ut ultricies gravida orci malesuada tincidunt.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum rhoncus ultrices. Donec egestas lectus in tincidunt eleifend. In maximus, ex vel tristique eleifend, odio nisi dictum magna, pellentesque porttitor erat ante quis dui. Ut ante sem, lacinia quis massa et, pretium volutpat tellus. Suspendisse condimentum imperdiet neque, eu volutpat odio varius facilisis. Morbi nec massa vehicula, vestibulum nulla in, sagittis velit. Ut ultricies gravida orci malesuada tincidunt.</p>
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       noReblog: true
       Month: "January"
       DayOfMonth: "13"
@@ -147,7 +147,7 @@ posts:
       Artist: "Shinedown"
       Album: "amaryllis"
       rebloggedusername: "reblogged"
-      rebloggedportraitURL-64: "../assets/img/portraitURL-64.png"
+      rebloggedportraitURL-64: "../assets/img/portraitURL-64.gif"
       Month: "January"
       DayOfMonth: "13"
       Year: "2022"
