--- a/src/data/base.yml
+++ b/src/data/base.yml
@@ -21,9 +21,9 @@ link4:
     URL: "/url"
 
 # BASICS
-title: 'Tumblr Title'
+title: 'Santanico'
 favicon: '../assets/img/favicon.ico'
-sidebar_img_URL: "../assets/img/avatar.jpg"
+sidebar_img_URL: "../assets/img/avatar.gif"
 description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum rhoncus ultrices. Donec egestas lectus in tincidunt eleifend. In maximus, ex vel tristique eleifend, odio nisi dictum magna, pellentesque porttitor erat ante quis dui. Ut ante sem, lacinia quis massa et, pretium volutpat tellus. Suspendisse condimentum imperdiet neque, eu volutpat odio varius facilisis. Morbi nec massa vehicula, vestibulum nulla in, sagittis velit. Ut ultricies gravida orci malesuada tincidunt.'
 
 # VIEWS
